# CropMyPDF

./: .gitignore  README.md  pyproject.toml  requirements.txt
cropmypdf/: __init__.py  __main__.py  pdf_crop.py
